--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <hr />
     <h2><a href="./public/movie-ranking.html">Movie Ranking Project</a></h2>
     <img src="./assets/images/movie-ranking.png" height="200" alt="A movie list" />
-    <h2><a href="./public/birthday-invite.html">Movie Ranking Project</a></h2>
+    <h2><a href="./public/birthday-invite.html">Birthday Invite Project</a></h2>
     <img src="./assets/images/birthday-invite.png" height="200" alt="A cake" />
     <hr />
     <a href="./public/about.html">About Me</a>
